Index in main folder

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <ul class="my-work-experience-duties">
                         <li class="my-work-experience-duty">Analysis of financial and economic activities of the company.</li> 
                         <li class="my-work-experience-duty">Preparation and transmission of reports.</li>
-                        <li class="my-work-experience-duty">Coordination of the economic department with the departments of technologists and engineers.</li>
+                        <li class="my-work-experience-duty">Coordination of the economic department with the department of technologists and engineers.</li>
                         <li class="my-work-experience-duty">Monitoring the implementation of planned indicators.</li>
                         <li class="my-work-experience-duty">Constant analysis of production costs, labor productivity, profitability of production.</li>
                         <li class="my-work-experience-duty">Participation in tenders, monitoring of tenders and preparation of documentation for participation.</li>
