--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
           <h1 class="about-me-name">Dima Zharyy</h1>
           <p class="about-me-description">
             Poltava, Ukraine. <br />
-            I'm an enthusiastic and detail-oriented Frontend Software Engineer seeking an
-            entry-level position with Company to use my skill-set in coding, troubleshooting complex
-            problems, and assisting in the timely completion of projects.
+            I'm an enthusiastic and detail-oriented Frontend Software Engineer
+            seeking an entry-level position with Company to use my skill-set in
+            coding, troubleshooting complex problems, and assisting in the
+            timely completion of projects.
           </p>
         </div>
 
@@ -37,7 +38,9 @@
           <ol class="my-projects-list">
             <li class="my-projects-item">
               <span class="my-projects-text">
-                <a href="https://dima-zharyy.github.io/goit-markup-hw-08/" class="my-projects-link"
+                <a
+                  href="https://dima-zharyy.github.io/goit-markup-hw-08/"
+                  class="my-projects-link"
                   >https://dima-zharyy.github.io/goit-markup-hw-08/</a
                 >
                 .........
@@ -47,7 +50,9 @@
             </li>
             <li class="my-projects-item">
               <span class="my-projects-text">
-                <a href="https://parfors.github.io/team-project-group8/" class="my-projects-link"
+                <a
+                  href="https://parfors.github.io/team-project-group8/"
+                  class="my-projects-link"
                   >https://parfors.github.io/team-project-group8/</a
                 >
                 .........
@@ -57,7 +62,9 @@
             </li>
             <li class="my-projects-item">
               <span class="my-projects-text">
-                <a href="https://dima-zharyy.github.io/goit-js-hw-11/" class="my-projects-link"
+                <a
+                  href="https://dima-zharyy.github.io/goit-js-hw-11/"
+                  class="my-projects-link"
                   >https://dima-zharyy.github.io/goit-js-hw-11/</a
                 >
                 ...........
@@ -75,10 +82,12 @@
           <!-- Company 1 -->
           <div class="my-work-experience-company">
             <h4 class="my-work-experience-position">
-              Enterpreneur <span class="my-work-experience-company">FOP Zharyy DS</span>
+              Enterpreneur
+              <span class="my-work-experience-company">FOP Zharyy DS</span>
             </h4>
             <p class="my-work-experience-period">
-              September 2015 - up to now <span class="my-work-experience-divider">|</span> Ukraine
+              September 2015 - up to now
+              <span class="my-work-experience-divider">|</span> Ukraine
             </p>
             <!-- <ul class="my-work-experience-duties">
               <li class="my-work-experience-duty">Lumber production.</li>
@@ -94,10 +103,13 @@
           <div class="my-work-experience-company">
             <h4 class="my-work-experience-position">
               Purchase Manager
-              <span class="my-work-experience-company">Korolivskiy Smak Company</span>
+              <span class="my-work-experience-company"
+                >Korolivskiy Smak Company</span
+              >
             </h4>
             <p class="my-work-experience-period">
-              April 2019 - August 2020 <span class="my-work-experience-divider">|</span> Ukraine
+              April 2019 - August 2020
+              <span class="my-work-experience-divider">|</span> Ukraine
             </p>
 
             <!-- <ul class="my-work-experience-duties">
@@ -158,20 +170,28 @@
           </h4>
           <h5 class="my-education-speciality">Business Economics</h5>
           <p class="my-education-period">
-            September 2004 - June 2009 <span class="my-education-period-divider">|</span> Ukraine
+            September 2004 - June 2009
+            <span class="my-education-period-divider">|</span> Ukraine
           </p>
 
           <h4 class="my-education-university">GOIT Academy</h4>
-          <h5 class="my-education-speciality">Frontend Full Stack Development</h5>
+          <h5 class="my-education-speciality">
+            Frontend Full Stack Development
+          </h5>
           <p class="my-education-period">
-            November 2021 - up to now <span class="my-education-period-divider">|</span> Ukraine
+            November 2021 - up to now
+            <span class="my-education-period-divider">|</span> Ukraine
           </p>
         </div>
       </div>
 
       <!-- Sidebar section -->
       <aside class="sidebar-section">
-        <img class="image-section" src="./img/dima-zharyy-av.jpg" alt="my photo" />
+        <img
+          class="image-section"
+          src="./img/dima-zharyy-av.jpg"
+          alt="my photo"
+        />
 
         <!-- Contacts section -->
         <div class="contacts-section">
@@ -179,15 +199,21 @@
 
           <div>
             <span class="contacts-section-type">cell:</span>
-            <a class="contacts-section-link" href="tel:+380504040346">+38 050 40 40 346</a>
+            <a class="contacts-section-link" href="tel:+380504040346"
+              >+38 050 40 40 346</a
+            >
           </div>
           <div>
             <span class="contacts-section-type">mail:</span>
-            <a class="contacts-section-link" href="mailto:d1mkaa@yahoo.com">d1mkaa@yahoo.com</a>
+            <a class="contacts-section-link" href="mailto:d1mkaa@yahoo.com"
+              >d1mkaa@yahoo.com</a
+            >
           </div>
           <div>
             <span class="contacts-section-type">github:</span>
-            <a class="contacts-section-link" href="https://github.com/dima-zharyy"
+            <a
+              class="contacts-section-link"
+              href="https://github.com/dima-zharyy"
               >github.com/dima-zharyy</a
             >
           </div>
@@ -198,14 +224,30 @@
           <h3 class="sidebar-title">Hard Skills</h3>
 
           <ul class="tech-skills-list">
-            <li class="tech-skills-item"><span class="tech-skills-item-text">HTML5</span></li>
-            <li class="tech-skills-item"><span class="tech-skills-item-text">CSS3</span></li>
-            <li class="tech-skills-item"><span class="tech-skills-item-text">Sass</span></li>
-            <li class="tech-skills-item"><span class="tech-skills-item-text">GIT</span></li>
-            <li class="tech-skills-item"><span class="tech-skills-item-text">NPM</span></li>
-            <li class="tech-skills-item"><span class="tech-skills-item-text">WebPack</span></li>
-            <li class="tech-skills-item"><span class="tech-skills-item-text">JavaScript</span></li>
-            <li class="tech-skills-item"><span class="tech-skills-item-text">React.js</span></li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">HTML5</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">CSS3</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">Sass</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">GIT</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">NPM</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">WebPack</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">JavaScript</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-item-text">React.js</span>
+            </li>
             <!-- <li class="tech-skills-item"><span class="tech-skills-item-text">Node.js</span></li> -->
           </ul>
         </div>
@@ -214,10 +256,18 @@
         <div class="soft-skills-section">
           <h3 class="sidebar-title">Soft Skills</h3>
           <ul class="soft-skills-list">
-            <li class="soft-skills-item"><span class="soft-skills-item-text">Agile</span></li>
-            <li class="soft-skills-item"><span class="soft-skills-item-text">GTD</span></li>
-            <li class="soft-skills-item"><span class="soft-skills-item-text">Teamwork</span></li>
-            <li class="soft-skills-item"><span class="soft-skills-item-text">Scrum</span></li>
+            <li class="soft-skills-item">
+              <span class="soft-skills-item-text">Agile</span>
+            </li>
+            <li class="soft-skills-item">
+              <span class="soft-skills-item-text">GTD</span>
+            </li>
+            <li class="soft-skills-item">
+              <span class="soft-skills-item-text">Teamwork</span>
+            </li>
+            <li class="soft-skills-item">
+              <span class="soft-skills-item-text">Scrum</span>
+            </li>
           </ul>
         </div>
 
@@ -233,7 +283,9 @@
               <span class="lang-skills-item-text">Russian - fluent</span>
             </li>
             <li class="lang-skills-item">
-              <span class="lang-skills-item-text">English - upper-intermediate</span>
+              <span class="lang-skills-item-text"
+                >English - upper-intermediate</span
+              >
             </li>
           </ul>
         </div>
